syntax = "proto2";

package com.harlan.protobuf;

option optimize_for = SPEED;
option java_package = "com.harlan.netty.six.protobuf";
option java_outer_classname = "DataInfo";

message Message{
    enum DataType {
        StudentType = 1;
        DogType = 2;
        CatType = 3;
    }

    required DataType data_type = 1;

    oneof dataBody{
        Student student = 2;
        Dog dog = 3;
        Cat cat = 4;
    }
}

message Student {
    required string name = 1;
    optional int32 age = 2;
    optional string address = 3;
}


message Dog{
    optional string name = 1;
    optional int32 age = 2;
}
message Cat {
    optional string name = 1;
    optional string city = 2;
}
